BUG FIXES NEEDED, SOMEONE PLEASE HELP ADDRESS THE DUPLICATE MODE ISSUE

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <link rel="stylesheet" href="css/Cherry_Mode_1.0.css">
     <link rel="stylesheet" href="css/Aqua_Mode_1.0.css">
     <link rel="stylesheet" href="css/Template_Mode_1.0.css">
-    <link rel ="stylesheet" href="css/Aqua_Mode_1.0.css">
     <link rel ="stylesheet" href="css/Halloween_Mode_1.0.css">
 
 
@@ -61,17 +60,13 @@
         <li><a href="../">Home</a></li>
         <li><a href="../about/">About</a></li>
         <!--
-        <li><a href="../calendar/">Calendar</a></li>
-        -->
+        <li><a href="../calendar/">Calendar</a></li> -->
+
         <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')" title="Dark/light">Classic Mode</a></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')" title="Dark/light">Dark Mode</a></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'cherry'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('cherry')" title="Dark/light">Cherry Mode</a></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'halloween'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('halloween')" title="Dark/light">Halloween Mode</a></li>
-
-        <!--
-        <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
-        -->
       </ul>
     </div>
 
@@ -658,7 +653,7 @@
           document.querySelector('#ham-switch').src = standardHam;
           break;
         case 'cherry':
-          document.querySelector('body').classList.add('cherry');
+          // document.querySelector('body').classList.add('cherry');
           document.querySelector('#ham-switch').src = standardHam;
           break;
         case 'aqua':
