--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.11.js"> </script>
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.4.js"></script>
+    <script type="text/javascript" src="js/FHSched_Base_V_1.0.js"></script>
 
     <link rel="stylesheet" href="css/FHSched_V_1.14.css">
     <link rel="stylesheet" href="css/Home_1.0.css">
@@ -30,17 +31,15 @@
     <link rel="stylesheet" href="css/Cherry_Mode_1.0.css">
     <link rel="stylesheet" href="css/Aqua_Mode_1.0.css">
     <link rel="stylesheet" href="css/Template_Mode_1.0.css">
-    <link rel="stylesheet" href="css/Halloween_Mode_1.0.css">
-
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
-  <body class = "dark">
+  <body onload="createThemes()" id="body" class = "dark">
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
-    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="images/Hamburger_icon.png" class="ham" id = "ham-switch"></a>
+    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="images/Hamburger_icon.png" class="ham"></a>
     <a class="ng-logo-a" role="button" onclick="showNGBanner()">
       <img src="images/National_Guard_Logo.png" class = "ng-logo">
     </a>
@@ -55,21 +54,15 @@
       <a class = "close-sidebar" role="button" onclick="showSidebar()">
         <img src="images/close-icon.png" class="close-icon">
       </a>
-      <ul>
+      <ul id = "sidebar-list">
         <li><a href="../">Home</a></li>
         <li><a href="../about/">About</a></li>
         <!--
         <li><a href="../calendar/">Calendar</a></li>
         -->
-        <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')" title="Dark/light">Classic Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')" title="Dark/light">Dark Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'cherry'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('cherry')" title="Dark/light">Cherry Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'halloween'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('halloween')" title="Dark/light">Halloween Mode</a></li>
-
-        <!--
-        <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
-        -->
+        <li><a role="button" onclick="addTheme()">Theme +</a><input type="text" id="modeInput" name="modeInput"><button type=button onclick="addTheme()">Add</button></li>
+        <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Theme</a></li>
+        <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Theme</a></li>
       </ul>
     </div>
 
@@ -108,16 +101,10 @@
         <br>
         Meet our hardworking team: <a href="../about/" target = "_blank">About</a>
         <br>
-        Today is National Walk to School Day!
+        Almost to Friday!
         <br>
         Big updates are arriving soon.
-        <!--
-        <br>
-        Meet our team: <a href="about">About</a>
-        -->
       </p>
-    </div>
-    <div class = "mode-img">
     </div>
 
     <div id = "wrongLunchDiv" class="wrongLunchDiv">
@@ -134,7 +121,7 @@
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
-          <li>Version 1.4.5</li>
+          <li>Version 1.4.6</li>
         </ul>
         <ul>
           <li>
@@ -199,19 +186,16 @@
     var today = new Date();
     var curMonth = today.getMonth();
     var curDate = today.getDate();
-    var curHour = today.getHours();
+    var curHour = today.getHours()-7;
     var curMin = today.getMinutes();
     var curSec = today.getSeconds();
-
-    var standardHam = "images/Hamburger_icon.png";
-
 
     function updateClock()
     {
       today = new Date();
       curMonth = today.getMonth();
       curDate = today.getDate();
-      curHour = today.getHours();
+      curHour = today.getHours()-7;
       curMin = today.getMinutes();
       curSec = (59 - today.getSeconds());
       curScheduleValue = calendar[curMonth][curDate - 1];
@@ -640,53 +624,7 @@
       return "";
     }
 
-    //Loads darkmode upon the website refresh
-    function loadModes()
-    {
-      document.querySelector('body').classList.remove('dark');
-      switch (localStorage.getItem('mode'))
-      {
-        case 'classic':
-          document.querySelector('body').classList.remove('dark');
-          document.querySelector('#ham-switch').src = standardHam;
-          break;
-        case 'dark':
-          document.querySelector('body').classList.add('dark');
-          document.querySelector('#ham-switch').src = standardHam;
-          break;
-        case 'cherry':
-          document.querySelector('body').classList.add('cherry');
-          document.querySelector('#ham-switch').src = standardHam;
-          break;
-        case 'aqua':
-          document.querySelector('body').classList.add('aqua');
-          document.querySelector('#ham-switch').src = standardHam;
-          break;
-        case 'halloween':
-          document.querySelector('body').classList.add('halloween');
-          break;
-        default:
-          document.querySelector('body').classList.add('dark');
-          document.querySelector('#ham-switch').src = standardHam;
-          break;
-      };
-      editLunchPeriod(currentSchedule["lunch"]);
-    }
-
-    //Changes styles for the sidebar
-    function showSidebar()
-    {
-      document.querySelector("#sidebar").classList.toggle('active');
-      document.querySelector("#ham-a").classList.toggle('active');
-    }
-
-    //Changes styles for National Guard Banner
-    function showNGBanner()
-    {
-      document.querySelector("#national-guard-banner").classList.toggle('active');
-    }
-
-    loadModes();
+    editLunchPeriod(currentSchedule["lunch"]);
 
     </script>
   </body>
