New Css referencing for themes
Ben: this is the new system to get link to new css files, i dont think hash is neccescary anymore

--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.4.js"></script>
     <script type="text/javascript" src="js/FHSched_Base_V_1.0.js"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="css/FHSched_V_1.14.css">
     <link rel="stylesheet" href="css/Home_1.0.css">
     <link rel="stylesheet" href="css/Dark_Mode_1.0.css">
-    <link rel="stylesheet" href="css/Cherry_Mode_1.0.css">
-    <link rel="stylesheet" href="css/Aqua_Mode_1.0.css">
     <link rel="stylesheet" href="css/Template_Mode_1.0.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body onload="createThemes()" id="body" class = "dark">
     <!--
@@ -60,7 +58,7 @@
         <!--
         <li><a href="../calendar/">Calendar</a></li>
         -->
-        <li><a role="button" onclick="addTheme()">Theme +</a><input type="text" id="modeInput" name="modeInput"><button type=button onclick="addTheme()">Add</button></li>
+        <li><a role="button" onclick="addTheme()">Theme +</a><input type="text" id="modeInput" name="modeInput"><button id = "inputButton" type=button onclick="addTheme()">Add</button></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Theme</a></li>
         <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Theme</a></li>
       </ul>
@@ -173,6 +171,17 @@
     </script>
 
     <script type="text/javascript">     //Not FHSSched
+    var inputEl = document.querySelector("#modeInput");
+    var inputButton = document.querySelector("#inputButton");
+
+    inputEl.addEventListener("keyup", function(event) {
+      if (event.keyCode === 13) {
+        event.preventDefault();
+        // Trigger the button element with a click
+        document.getElementById("inputButton").click();
+      }
+    });
+
     //Referencing HTML elements
     var timer = document.querySelector("#timer");
     var period = document.querySelector("#period");
