--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -10,17 +10,14 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <script type="text/javascript" src="../js/FHSched_Base_V_1.0.js"></script>
+    <script type="text/javascript" src="../js/FHSched_Base_V_1.2.js"></script>
 
-    <link rel="stylesheet" href="../css/FHSched_V_1.14.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/Privacy_Policy_1.0.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
-    <link rel="stylesheet" href="../css/Cherry_Mode_1.0.css">
-    <link rel="stylesheet" href="../css/Aqua_Mode_1.0.css">
-    <link rel="stylesheet" href="../css/Template_Mode_1.0.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
-  <body class = "dark">
+  <body onload="createThemes()" id="body" class = "dark">
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
@@ -31,7 +28,7 @@
 
     <div>
       <p class="header">
-        <a href="/">FHSched</a>
+        <a href="../">FHSched</a>
       </p>
     </div>
 
@@ -45,8 +42,18 @@
         <!--
         <li><a href="../calendar/">Calendar</a></li>
         -->
-        <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Mode</a></li>
+        <li id="add-theme">
+          <a role="button" onclick="showAddTheme()" id="a-add-theme">+ Theme</a>
+          <a role="button" id="input-theme">
+            <input type="text" id="modeInput" name="modeInput"><button id = "inputButton" type=button onclick="addTheme()">Add</button>
+          </a>
+        </li>
+        <li>
+          <a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Theme</a>
+        </li>
+        <li>
+          <a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Theme</a>
+        </li>
       </ul>
     </div>
 
