Added Puzzle for themes and placeholder for + Theme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.11.js"> </script>
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.4.js"></script>
-    <script type="text/javascript" src="js/FHSched_Base_V_1.2.js"></script>
+    <script type="text/javascript" src="js/FHSched_Base_V_1.3.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -52,15 +52,15 @@
         <img src="images/close-icon.png" class="close-icon">
       </a>
       <ul id = "sidebar-list">
-        <li><a href="../">Home</a></li>
-        <li><a href="../about/">About</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="about/">About</a></li>
         <!--
         <li><a href="../calendar/">Calendar</a></li>
         -->
         <li id="add-theme">
           <a role="button" onclick="showAddTheme()" id="a-add-theme">+ Theme</a>
           <a role="button" id="input-theme">
-            <input type="text" id="modeInput" name="modeInput"><button id = "inputButton" type=button onclick="addTheme()">Add</button>
+            <input type="text" id="modeInput" name="modeInput" placeholder="Eg: Dark"><button id = "inputButton" type=button onclick="addTheme()">Add</button>
           </a>
         </li>
         <li>
@@ -103,13 +103,15 @@
 
     <div class="">
       <p class = "splash">
-        Proudly sponsored by <span style="color:RGB(180,140,40)">National Guard</span>!
+        <span style="color:red">New unlockable themes</span> each week!
         <br>
-        Meet our hardworking team: <a href="../about/" target = "_blank">About</a>
+        To unlock: Open the sidebar and click "+ Theme"
         <br>
-        Almost to Friday!
+        Then enter and guess the theme name by:
         <br>
-        Big updates are arriving soon.
+        Solving the puzzle or asking around school
+        <br>
+        Click to solve the puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
       </p>
     </div>
 
@@ -123,7 +125,7 @@
     <footer>
       <div class="foot">
         <ul>
-          <li><a href="../privacy-policy/">Privacy Policy</a></li>
+          <li><a href="privacy-policy/">Privacy Policy</a></li>
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
@@ -179,6 +181,8 @@
     </script>
 
     <script type="text/javascript">     //Not FHSSched
+    var isHomePage = '';
+
     var inputEl = document.querySelector("#modeInput");
     var inputButton = document.querySelector("#inputButton");
 
