--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <script type="text/javascript" src="../js/FHSched_Base_V_1.2.js"></script>
+    <script type="text/javascript" src="../js/FHSched_Base_V_1.3.js"></script>
 
     <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/Privacy_Policy_1.0.css">
@@ -148,5 +148,8 @@
         </a>
       </div>
     </div>
+    <script type="text/javascript">
+      var isHomePage = '../';
+    </script>
   </body>
 </html>
