Fixing header and footer for Calendar
Was slightly offset to the right, fixed dat

--- a/Calendar/SeptemberCalendar.html
+++ b/Calendar/SeptemberCalendar.html
@@ -76,7 +76,7 @@
 
 </script>
 
-   <p class="header" style = "height: 150px;">
+   <p class="header">
          <a href="../"> FHSched Calendar </a>
     </p>
 
