--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <script type="text/javascript" src="../js/FHSched_Base_V_1.3.js"></script>
+    <script type="text/javascript" src="../js/FHSched_Base_V_1.6.js"></script>
 
     <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/About_1.0.css">
@@ -49,14 +49,11 @@
         <li id="add-theme">
           <a role="button" onclick="showAddTheme()" id="a-add-theme">+ Theme</a>
           <a role="button" id="input-theme">
-            <input type="text" id="modeInput" name="modeInput"><button id = "inputButton" type=button onclick="addTheme()">Add</button>
+            <input type="text" id="modeInput" name="modeInput" placeholder="Eg: Dark"><button id = "inputButton" type=button onclick="addTheme()">Add</button>
           </a>
         </li>
         <li>
           <a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Theme</a>
-        </li>
-        <li>
-          <a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Theme</a>
         </li>
       </ul>
     </div>
@@ -246,7 +243,7 @@
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
-          <li>Version 1.4.6</li>
+          <li>Version 1.5.0</li>
         </ul>
         <ul>
           <li>
@@ -290,6 +287,17 @@
     -->
     <script type="text/javascript">
       var isHomePage = '../';
+
+      var inputEl = document.querySelector("#modeInput");
+      var inputButton = document.querySelector("#inputButton");
+
+      inputEl.addEventListener("keyup", function(event) {
+        if (event.keyCode === 13) {
+          event.preventDefault();
+          // Trigger the button element with a click
+          document.getElementById("inputButton").click();
+        }
+      });
     </script>
   </body>
 </html>
