Another Theme fix attempt

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.11.js"> </script>
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.5.js"></script>
-    <script type="text/javascript" src="js/FHSched_Base_V_1.6.js"></script>
+    <script type="text/javascript" src="js/FHSched_Base_V_1.7.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -108,7 +108,7 @@
         <br>
         Solving the puzzle or asking around school
         <br>
-        Click to solve the puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
+        Click to solve Monday's puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
       </p>
     </div>
 
