--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="css/FHSched_V_1.15.css">
+    <link rel="stylesheet" href="css/FHSched_V_1.15a.css">
     <link rel="stylesheet" href="css/Home_1.1.css">
     <link rel="stylesheet" href="css/Dark_Mode_1.0.css">
   </head>
