No one wants the puzzle in a new tab

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <br>
         Solving the puzzle or asking around school
         <br>
-        Click to solve Monday's puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
+        Click to solve Monday's puzzle: <a href="puzzle">Puzzle</a>
       </p>
     </div>
 
